Fix broken layout add-to-channels

--- a/core/app/assets/stylesheets/bubble/tabs.css.less
+++ b/core/app/assets/stylesheets/bubble/tabs.css.less
@@ -217,7 +217,7 @@
       padding: 12px 0;
       background: #f3f6fa;
 
-      span {
+      .title {
         display: block;
         padding: 0 0 13px 22px;
         line-height: 26px;
